spacing fix

--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -478,7 +478,7 @@ html, body {
     font-family: 'Source Sans Pro';
     font-weight: 300;
     word-wrap: break-word;
-    padding-top: 0px;
+    padding-top: 20px;
 
 }
 
